Replace OkHttp with Apache HttpClient (4.5). Initial work for proxy support.
 * Note: platform update is need for correct proxy.pac file processing.

Implements #468